--- a/calculator.css
+++ b/calculator.css
@@ -1,4 +1,4 @@
-input {
+#buttons input {
 	width: 40px;
 	height: 40px;
 	text-align: center;
@@ -6,18 +6,34 @@ input {
 
 #calculator{
 	border: 3px solid #555;	
-	width: 210px;
+	width: 220px;
+	border-radius: 25px; 
+	background-color: #300000;
+	position: relative;
+	margin: auto;
 }
 
 #buttons{
-	margin: 15px;
+	margin: 20px;
 }
 
-#display{ 
-	width: 170px;
-	height: 30px;
-	margin: 15px;
-	border: 3px solid #555;
+#display{
 	text-align: left;
 	font-size: 15px;
+	vertical-align: middle;
+	word-wrap: break-word;
+}
+
+#displayContainer{
+	vertical-align: middle;
+	width: 170px;
+	height: 50px;
+	margin: 20px;
+	border: 3px solid #555;
+	background-color: #D8D8D8;
+}
+
+#settingsDiv{
+	width: 30%;
+	margin: auto;
 }
